Logo was not centered in Firefox desktop, fixed this

--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,7 @@ ul.page-links-desktop {
   }
 
   .row.tf-logo {
+    text-align: center;
     margin-bottom: 3em;
   }
 
